--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
      <input type="button" value="Clave" id='Clave' onclick="Clave()">
      <script src="cipher.js"></script>
      <script src="index.js"></script>
-     <script type="style.CSS"></script>
+     <script scr="style.CSS"></script>
     </div>
     <div>
      <p>Alfabeto sin cifrar: A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
